--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,7 @@ pydantic==2.6.1
 python-dotenv==1.0.0
 requests==2.31.0
 uvicorn==0.27.1
+google-api-python-client==2.118.0
+google-auth==2.27.0
+google-auth-oauthlib==1.2.0
+google-auth-httplib2==0.2.0
