--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-fastapi==0.109.2
-pydantic==2.6.1
-python-dotenv==1.0.0
+fastapi==0.110.0
+pydantic==2.6.3
+python-dotenv==1.0.1
 requests==2.31.0
 uvicorn==0.27.1
 google-api-python-client==2.118.0
@@ -8,3 +8,4 @@ google-auth==2.27.0
 google-auth-oauthlib==1.2.0
 google-auth-httplib2==0.2.0
 pymongo==4.6.1
+google-generativeai==0.3.2
