--- a/requirements.txt
+++ b/requirements.txt
@@ -3,10 +3,20 @@ fastapi==0.109.2
 uvicorn==0.27.1
 pydantic==2.6.1
 python-multipart==0.0.9  # For form data handling
+starlette==0.36.3  # Required for FastAPI
 
 # Database
 pymongo==4.6.1
 motor==3.3.2  # Async MongoDB driver
+sqlalchemy==2.0.27  # SQL ORM
+
+# Authentication
+authlib==1.3.0
+itsdangerous==2.1.2
+passlib==1.7.4
+bcrypt==4.1.2  # Required by passlib
+python-jose[cryptography]==3.3.0
+bcrypt
 
 # Google APIs
 google-api-python-client==2.118.0
@@ -36,5 +46,7 @@ flake8==7.0.0  # Linting
 # Logging
 loguru==0.7.2
 
-# New added pydantic-settings
+# Settings
 pydantic-settings==2.1.0
+
+pydantic[email]
