--- a/requirements.txt
+++ b/requirements.txt
@@ -8,20 +8,16 @@ starlette==0.36.3  # Required for FastAPI
 # Database
 pymongo==4.6.1
 motor==3.3.2  # Async MongoDB driver
-sqlalchemy==2.0.27  # SQL ORM
 
 # Authentication
 authlib==1.3.0
 itsdangerous==2.1.2
-passlib==1.7.4
-bcrypt==4.1.2  # Required by passlib
 python-jose[cryptography]==3.3.0
-bcrypt
 
 # Google APIs
 google-api-python-client==2.118.0
 google-auth==2.27.0
-google-auth-oauthlib==1.2.0
+google-auth-oauthlib==0.4.6  # Specific version to avoid file_cache warning
 google-auth-httplib2==0.2.0
 google-generativeai==0.3.2
 
@@ -33,20 +29,12 @@ requests==2.31.0
 python-dotenv==1.0.1
 httpx==0.27.0  # For async HTTP requests
 
-# Testing
-pytest==8.0.2
-pytest-asyncio==0.23.5  # For async tests
-pytest-cov==4.1.0  # For test coverage
-
-# Development
-black==24.2.0  # Code formatting
-isort==5.13.2  # Import sorting
-flake8==7.0.0  # Linting
-
 # Logging
 loguru==0.7.2
 
 # Settings
 pydantic-settings==2.1.0
-
 pydantic[email]
+
+# Clerk
+fastapi-clerk-auth
