--- a/.github/workflows/crashlens-scan.yml
+++ b/.github/workflows/crashlens-scan.yml
@@ -44,31 +44,14 @@ jobs:
         with:
           python-version: '3.12'  # Match your project
           
-      - name: Install Poetry
-        uses: snok/install-poetry@v1
-        with:
-          version: latest
-          virtualenvs-create: true
-          virtualenvs-in-project: true
-          
-      - name: Load cached dependencies
-        id: cached-poetry-dependencies
-        uses: actions/cache@v4
-        with:
-          path: .venv
-          key: venv-${{ runner.os }}-${{ steps.setup-python.outputs.python-version }}-${{ hashFiles('**/poetry.lock') }}
-          
-      - name: Install dependencies
-        if: steps.cached-poetry-dependencies.outputs.cache-hit != 'true'
-        run: poetry install --no-interaction --no-root
-        
+    
       - name: Install Crashlens (Latest Published Version)
         run: |
           # Install your published package
-          poetry run pip install crashlens==2.9.1
+          pip install crashlens==2.9.1
           
           # Verify installation
-          poetry run crashlens --version
+          crashlens --version
           
       - name: Initialize Crashlens Configuration
         run: |
@@ -80,7 +63,7 @@ jobs:
           export CRASHLENS_CREATE_WORKFLOW="false"
           
           # Initialize config
-          poetry run crashlens init --non-interactive
+            crashlens init --non-interactive
           
           # Show configuration
           echo "📋 Crashlens Configuration:"
@@ -94,10 +77,10 @@ jobs:
           mkdir -p logs
           
           # Generate different scenarios for comprehensive testing
-          poetry run crashlens simulate --output logs/retry-patterns.jsonl --count 50 --scenario retry-loop --seed 42
-          poetry run crashlens simulate --output logs/model-overkill.jsonl --count 30 --scenario model-overkill --seed 123
-          poetry run crashlens simulate --output logs/normal-usage.jsonl --count ${{ inputs.count || 100 }} --scenario normal --seed 456
-          poetry run crashlens simulate --output logs/slow-requests.jsonl --count 25 --scenario slow --seed 789
+            crashlens simulate --output logs/retry-patterns.jsonl --count 50 --scenario retry-loop --seed 42
+            crashlens simulate --output logs/model-overkill.jsonl --count 30 --scenario model-overkill --seed 123
+            crashlens simulate --output logs/normal-usage.jsonl --count ${{ inputs.count || 100 }} --scenario normal --seed 456
+            crashlens simulate --output logs/slow-requests.jsonl --count 25 --scenario slow --seed 789
           
           # Show generated files
           echo "📁 Generated log files:"
@@ -113,13 +96,13 @@ jobs:
         run: |
           echo "🔍 Running retry loop detection..."
           
-          poetry run crashlens policy-check logs/retry-patterns.jsonl \
+            crashlens policy-check logs/retry-patterns.jsonl \
             --policy-template retry-loop-prevention \
             --severity-threshold high \
             --format markdown > retry-analysis-report.md
             
           # Also generate JSON for programmatic access
-          poetry run crashlens policy-check logs/retry-patterns.jsonl \
+            crashlens policy-check logs/retry-patterns.jsonl \
             --policy-template retry-loop-prevention \
             --severity-threshold high \
             --format json > retry-analysis-results.json
@@ -132,7 +115,7 @@ jobs:
         run: |
           echo "🔍 Running model overkill detection..."
           
-          poetry run crashlens policy-check logs/model-overkill.jsonl \
+            crashlens policy-check logs/model-overkill.jsonl \
             --policy-template model-overkill-detection \
             --severity-threshold high \
             --format markdown > model-overkill-report.md
@@ -149,13 +132,13 @@ jobs:
           cat logs/*.jsonl > logs/combined-logs.jsonl
           
           # Run full policy suite
-          poetry run crashlens policy-check logs/combined-logs.jsonl \
+            crashlens policy-check logs/combined-logs.jsonl \
             --policy-template all \
             --severity-threshold medium \
             --format markdown > comprehensive-analysis-report.md
             
           # Generate JSON summary
-          poetry run crashlens policy-check logs/combined-logs.jsonl \
+            crashlens policy-check logs/combined-logs.jsonl \
             --policy-template all \
             --severity-threshold medium \
             --format json > comprehensive-analysis-results.json
@@ -169,13 +152,13 @@ jobs:
           echo "🛡️ Running security dependency scan..."
           
           # Install security tools
-          poetry run pip install safety bandit
+            pip install safety bandit
           
           # Check for known vulnerabilities
-          poetry run safety check --json --output safety-report.json || echo "Safety scan completed with findings"
+            safety check --json --output safety-report.json || echo "Safety scan completed with findings"
           
           # Static security analysis on source code
-          poetry run bandit -r crashlens/ -f json -o bandit-report.json || echo "Bandit scan completed"
+            bandit -r crashlens/ -f json -o bandit-report.json || echo "Bandit scan completed"
           
           echo "✅ Security scan completed"
           
@@ -261,7 +244,7 @@ jobs:
           
           EOF
           
-          poetry run python analyze_performance.py
+            python analyze_performance.py
           
       - name: Generate Comprehensive Report
         if: always()
