--- a/.github/workflows/crashlens-strict.yml
+++ b/.github/workflows/crashlens-strict.yml
@@ -246,4 +246,4 @@ jobs:
               ]
             }
         env:
-          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK_URL }}
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
